# action-lite

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: action.rs  lib.rs  main.rs  parser.rs  project.rs  status.rs  template.rs  utils.rs  workspace.rs
templates/: workspace_readme.md
